# project-chaggg

./: .gitignore  README.md  data_access&clean.ipynb  download_data.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
algorithms/: __init__.py  knn_lrr.py  knn_sklearn.py  max_heap.py
data/: clean.ipynb  clean.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RUBRIC_MAPPING.md  US-2.4_KNN_report.md  US-2.4_KNN_workflow.md  US-2.6_DBSCAN_report.md  dbscan-improvement-workflow.md
notebooks/: 01_download_data.ipynb  angel_sandbox.ipynb  gustavo_sandbox.ipynb  yuri_sandbox.ipynb
notebooks/Carl/: carl_raw_sandbox.ipynb  historicalavgbaseline.py  raw_sandbox.ipynb  sprint2_sandbox.ipynb
retrospectives/: carl.md  gustavo.md
scripts/: clean.py  config.py  convert_cleaned_csv_to_parquet.py  demo_knn.sh  fetch.py  generate_map_data.py  knn_location_only.py  main.py  precompute_knn_arrays.py  run_dbscan_hotspots.py  run_knn_forecast.py  run_knn_prep.py  run_knn_tune_timescale.py  utils.py
src/: clean.py  crime_knn.py  crime_knn_sklearn.py  preprocess_data.py
src/algorithms/: __init__.py  data_prep.py  dbscan_hotspots.py  distance.py  kdtree.py  knn_scratch.py  metrics.py
src/flask_app/: __init__.py  data.py  knn_paths.py  (+1 more)
tests/: test_clean.py  test_data_prep_split.py  test_distance_scaler.py  test_estimators.py  test_flask_data_loading.py  test_flask_routes.py  test_kdtree_knn.py  test_knn_location_only.py  test_knn_lrr.py  test_max_heap.py  test_metrics.py  test_precompute_knn_arrays.py  test_preprocessing.py  tests_utils.py
(+19 files in other folders)
