[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "project-chaggg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0.0",
    "gdown>=5.2.1",
    "geopandas[all]>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "notebooks",
    "data",
    "outputs",
    "src/project_chaggg.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "**/dbscan_hotspots.py",
]

[tool.coverage.report]
fail_under = 78
show_missing = true
